--- a/Data Modelling/etl.ipynb
+++ b/Data Modelling/etl.ipynb
@@ -1274,7 +1274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Close Connection to Sparkify Database"
+    "# Closing Connection to Sparkify Database"
    ]
   },
   {
