--- a/Cloud DWH in Amazon Redshift/Create IAM.ipynb
+++ b/Cloud DWH in Amazon Redshift/Create IAM.ipynb
@@ -6,7 +6,7 @@
     "editable": true
    },
    "source": [
-    "### Import the libraries"
+    "### Importing the libraries"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "editable": true
    },
    "source": [
-    "### Create client to IAM role"
+    "### Creating client to IAM role"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "editable": true
    },
    "source": [
-    "### Create the role, attach policy and get the role's ARN"
+    "### Creating the role, attach policy and get the role's ARN"
    ]
   },
   {
