--- a/Cloud DWH in Amazon Redshift/Create IAM.ipynb
+++ b/Cloud DWH in Amazon Redshift/Create IAM.ipynb
@@ -28,7 +28,7 @@
     "editable": true
    },
    "source": [
-    "### Read the necessary credentials from the config file (dwh.cfg)"
+    "### Reading the necessary credentials from the config file (dwh.cfg)"
    ]
   },
   {
