--- a/Cloud DWH in Amazon Redshift/create_cluster.ipynb
+++ b/Cloud DWH in Amazon Redshift/create_cluster.ipynb
@@ -6,7 +6,7 @@
     "editable": true
    },
    "source": [
-    "### Import the libraries"
+    "### Importing the libraries"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "editable": true
    },
    "source": [
-    "### Read credentials from 'dwh.cfg' file"
+    "### Reading credentials from 'dwh.cfg' file"
    ]
   },
   {
@@ -65,7 +65,7 @@
     "editable": true
    },
    "source": [
-    "### Create clients for EC2, S3 and Redshift"
+    "### Creating clients for EC2, S3 and Redshift"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "editable": true
    },
    "source": [
-    "### Create the Redshift cluster"
+    "### Creating the Redshift cluster"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "editable": true
    },
    "source": [
-    "### Describe the cluster"
+    "### Describing the cluster"
    ]
   },
   {
@@ -273,7 +273,7 @@
     "editable": true
    },
    "source": [
-    "### Open an incoming TCP port to access the cluster endpoint"
+    "### Opening an incoming TCP port to access the cluster endpoint"
    ]
   },
   {
