--- a/Cloud DWH in Amazon Redshift/create_cluster.ipynb
+++ b/Cloud DWH in Amazon Redshift/create_cluster.ipynb
@@ -316,7 +316,7 @@
     "editable": true
    },
    "source": [
-    "### Attempt to connect to the cluster"
+    "### Attempting to connect to the cluster"
    ]
   },
   {
